--- a/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
@@ -77,7 +77,7 @@
         @Html.DisplayFor(m => m.UnitPrice)
     </div>
 </div>
-@Html.Partial("_PoSizeRates")
+@Html.Partial("_PoSizeRatios")
 <div class="row mt15">
     <label class="control-label col-md-2 col-sm-3">
         @Html.DisplayNameFor(model => model.Notes)
