--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -4,6 +4,10 @@
 @model PurchaseOrderCreateVM
 @{
     ViewBag.Title = EntityStrings.CreatePurchaseOrder;
+    if (Model.Customer != null)
+    {
+        Model.CustomerId = Model.Customer.Id;
+    }
 }
 <h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 <form action="/PurchaseOrders/Create" method="post" onsubmit="enableCaptions();">
@@ -12,6 +16,7 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(m => m.CustomerId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.PoNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -27,11 +32,56 @@
                 @Html.ValidationMessageFor(m => m.OrderDate, "", new { @class = "text-danger" })
             </div>
         </div>
+        @*
+            <div class="form-group">
+                @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.EditorFor(m => m.DueDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(m => m.DueDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        *@
+        @if (Model.Customer != null)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.Customer, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.TextBoxFor(m => m.CustomerName, new { @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.CustomerName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.EditorFor(m => m.CustomerName, new
+               {
+                   htmlAttributes = new
+                   {
+                       @class = "form-control ui-autocomplete-input",
+                       autocomplete = "off",
+                       data_url = Url.Action("GetCustomersForAutoComplete", "Customers")
+                   }
+               })
+                    @Html.ValidationMessageFor(m => m.CustomerName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
         <div class="form-group">
-            @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.CustomerPoNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.DueDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.DueDate, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.CustomerPoNr, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.CustomerPoNr, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.DiscountRate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-2 col-md-3 col-sm-3">
+                @{ Html.EnableClientValidation(false); }
+                @Html.EditorFor(m => m.DiscountRate, new { htmlAttributes = new { @class = "form-control text-right" } })
+                @{ Html.EnableClientValidation(true); }
+                @Html.ValidationMessageFor(m => m.DiscountRate, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -41,33 +91,9 @@
                 @Html.ValidationMessageFor(m => m.FreightTermId, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CustomerPoNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.CustomerPoNr, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.CustomerPoNr, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         @Html.Partial("_ProductAutoComplete")
         @Html.Partial("_AllPriceEdit", Model)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.DropDownListFor(m => m.CustomerId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.CustomerId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.DiscountRate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-2 col-md-3 col-sm-3">
-                @Html.EditorFor(m => m.DiscountRate, new { htmlAttributes = new { @class = "form-control text-right" } })
-                @Html.ValidationMessageFor(m => m.DiscountRate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @Html.Partial("_ProductSizingPartial")
 
         <div class="form-group">
             @Html.LabelFor(model => model.SupplierId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -83,6 +109,8 @@
                 @Html.ValidationMessageFor(m => m.SupplierDueDate, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        @Html.Partial("_ProductSizingPartial")
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -104,4 +132,26 @@
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $('#CustomerName').autocomplete({
+            minLenght: 1,
+            source: function (request, response) {
+                var url = $(this.element).data('url');
+                $.getJSON(url, { searchString: request.term, pageSize: 25 }, function (data) {
+                    response(data);
+                });
+            },
+            select: function (event, ui) {
+                var customerId = ui.item.id;
+                $('#CustomerId').val(customerId);
+                $('#DiscountRate').val(fixDecimalVal(ui.item.DiscountRate));
+            },
+            change: function (event, ui) {
+                if (ui.item == null) {
+                    $(event.target).val('');
+                    $('#CustomerId').val('');
+                }
+            }
+        });
+    </script>
 }
