--- a/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
@@ -56,3 +56,11 @@
         @Html.ValidationMessageFor(m => m.RetailCurrencyId, "", new { @class = "text-danger" })
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#UnitPrice').on('keydown', decNumbersOnly);
+        $('#BuyingPrice').on('keydown', decNumbersOnly);
+        $('#RetailPrice').on('keydown', decNumbersOnly);
+        $('#RoyaltyFee').on('keydown', decNumbersOnly);
+    });
+</script>
