--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -9,6 +9,7 @@
     bool canUserEdit = ViewBag.canUserEdit;
     bool canUserCreate = ViewBag.canUserCreate;
     bool canUserDelete = ViewBag.canUserDelete;
+    bool canSeeRestricted = ViewBag.canSeeRestricted;
     bool canUserApprove = ViewBag.canUserApprove;
     bool canUserCancelPO = ViewBag.canUserCancelPO;
 
@@ -43,9 +44,14 @@
             <th>@Html.DisplayNameFor(model => model.Product)</th>
             <th>@Html.DisplayNameFor(model => model.Customer)</th>
             <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
-            <th>@Html.DisplayNameFor(model => model.DueDate)</th>
-            <th>@Html.DisplayNameFor(model => model.Quantity)</th>
-            <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+            @if (canSeeRestricted)
+            {
+                <th>@Html.DisplayNameFor(model => model.DueDate)</th>
+                <th>@Html.DisplayNameFor(model => model.DiscountRate)</th>
+                <th>@Html.DisplayNameFor(model => model.Quantity)</th>
+                <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+                <th>Total</th>
+            }
         </tr>
         @foreach (var item in Model)
         {
@@ -105,13 +111,21 @@
                 <td>@Html.DisplayFor(modelItem => item.PoNr)</td>
                 <td>@Html.DisplayFor(modelItem => item.Product)</td>
                 <td>@Html.DisplayFor(modelItem => item.Customer)</td>
-                <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                <td>@Html.DisplayFor(modelItem => item.DueDate)</td>
-                <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
-                <td align="right">
-                    @Html.DisplayFor(modelItem => item.UnitPrice)
-                    @Html.DisplayFor(modelItem => item.SellingCurrency)
-                </td>
+                <td align="right">@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                @if (canSeeRestricted)
+                {
+                    <td align="right">@Html.DisplayFor(modelItem => item.DueDate)</td>
+                    <td align="right">@Html.DisplayFor(modelItem => item.DiscountRate)</td>
+                    <td align="right">@Html.DisplayFor(modelItem => item.Quantity)</td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.UnitPrice)
+                        @Html.DisplayFor(modelItem => item.SellingCurrency)
+                    </td>
+                    <td align="right">
+                        @(((item.UnitPrice * item.DiscountRate) / 100 * item.Quantity).ToString("###,###.00"))
+                        @Html.DisplayFor(modelItem => item.SellingCurrency)
+                    </td>
+                }
             </tr>
         }
     </table>
