--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductAutoComplete.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductAutoComplete.cshtml
@@ -24,9 +24,10 @@
 <script type="text/javascript">
     $('#ProductCode').autocomplete({
         minLenght: 1,
+        delay: 500,
         source: function (request, response) {
             var url = $(this.element).data('url');
-            $.getJSON(url, { searchString: request.term, pageSize: 25 }, function (data) {
+            $.getJSON(url, { searchString: request.term, pageSize: 20 }, function (data) {
                 response(data);
             });
         },
@@ -42,6 +43,7 @@
             setSelectListID('#RoyaltyCurrencyId > option', ui.item.RoyaltyCurrencyId);
             $('#RetailPrice').val(fixDecimalVal(ui.item.RetailPrice));
             setSelectListID('#RetailCurrencyId > option', ui.item.RetailCurrencyId);
+            console.log('select');
 
             if (productId != null && productId != '') {
                 $.getJSON('/Suppliers/GetSupplierList', { productId: productId, pageSize: 100 }, function (suppliers) {
@@ -65,6 +67,13 @@
                 $(event.target).val('');
                 $('#ProductId').val('');
             }
+        },
+        open: function (event, ui) {
+            var boxWidth = $('#ProductCode').outerWidth();
+            var minWidth = 300;
+            $(this).autocomplete("widget")
+                .css({ "width": (boxWidth > minWidth ? boxWidth : minWidth) })
+                .addClass('fontSize80pc');
         }
     });
 </script>
