--- a/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Details.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Details.cshtml
@@ -4,6 +4,11 @@
 @model ProcessStepTemplate
 @{
     ViewBag.Title = EntityStrings.ProcessStepTemplate;
+
+    //Authorization Flags
+    bool canUserEdit = ViewBag.canUserEdit;
+    bool canUserCreate = ViewBag.canUserCreate;
+    bool canUserDelete = ViewBag.canUserDelete;
 }
 
 <h2>@EntityStrings.ProcessStepTemplate @ActionStrings.Details</h2>
@@ -26,6 +31,14 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.IgnoreInRepeat)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.IgnoreInRepeat)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
         @Html.DisplayNameFor(model => model.ProcessTemplate)
     </label>
     <div class="col-md-10 col-sm-9">
@@ -38,6 +51,22 @@
     </label>
     <div class="col-md-10 col-sm-9">
         @Html.DisplayFor(m => m.RequiredWorkDays)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.ModifiedUser)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.ModifiedUser)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.CreatedUser)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.CreatedUser)
     </div>
 </div>
 @Html.Partial("_DetailFormButtonsPartial")
