--- a/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Edit.cshtml
@@ -12,8 +12,15 @@
     
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.Id)
-        
+        @Html.HiddenFor(m => m.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProcessTemplate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DisplayFor(m => m.ProcessTemplate)
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -24,15 +31,22 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.DisplayOrder, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(m => m.DisplayOrder, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
                 @Html.ValidationMessageFor(m => m.DisplayOrder, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.IgnoreInRepeat, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.EditorFor(m => m.IgnoreInRepeat, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.IgnoreInRepeat, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.HiddenFor(m => m.ProcessTemplateId)
         <div class="form-group">
             @Html.LabelFor(model => model.RequiredWorkDays, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.RequiredWorkDays, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(m => m.RequiredWorkDays, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
                 @Html.ValidationMessageFor(m => m.RequiredWorkDays, "", new { @class = "text-danger" })
             </div>
         </div>
