--- a/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/ProcessStepTemplates/Index.cshtml
@@ -9,20 +9,24 @@
     bool canUserEdit = ViewBag.canUserEdit;
     bool canUserCreate = ViewBag.canUserCreate;
     bool canUserDelete = ViewBag.canUserDelete;
+    bool canSeeRestricted = ViewBag.canSeeRestricted;
 
     //Records & Pager
     int page = ViewBag.page;
     int totalCount = ViewBag.totalCount;
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
+
+	var title = EntityStrings.ProcessStepTemplates;
 }
 <div class="row well">
     <div class="col-md-8 col-sm-7">
-        <h4>@EntityStrings.ProcessStepTemplates</h4>
+        <h4>@title</h4>
     </div>
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
     {
         @Html.Hidden("page", page)
+        @Html.Hidden("pageSize", pageSize)
         <div class="col-md-4 col-sm-5">
             @Html.Partial("_SearchBoxPartial")
         </div>
@@ -30,56 +34,48 @@
 </div>
 @if (totalCount > 0)
 {
-    <table class="table table-hover">
-        <tr>
-            <th>@ActionStrings.Action</th>
-            <th>@Html.DisplayNameFor(model => model.Title)</th>
-            <th>@Html.DisplayNameFor(model => model.DisplayOrder)</th>
-            <th>@Html.DisplayNameFor(model => model.ProcessTemplate)</th>
-            <th>@Html.DisplayNameFor(model => model.RequiredWorkDays)</th>
-        </tr>
+	<div id="processStepTemplateGridParent" class="table-responsive">
+		<table id="processStepTemplateGrid" class="table table-striped table-bordered table-hover">
+			<tr>
+				<th>@Html.DisplayNameFor(model => model.Title)</th>
+				<th>@Html.DisplayNameFor(model => model.DisplayOrder)</th>
+				<th>@Html.DisplayNameFor(model => model.IgnoreInRepeat)</th>
+				<th>@Html.DisplayNameFor(model => model.RequiredWorkDays)</th>
+				<th>@Html.DisplayNameFor(model => model.ProcessTemplate)</th>
+				<th>@ActionStrings.Actions</th>
+			</tr>
     @foreach (var item in Model)
     {
-            <tr>
-                <td>
-                    <div class="btn-group">
-                        <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
-                            @if (canUserEdit)
-                            {
-                                <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
-                            }
-                            @if (canUserDelete)
-                            {
-                                <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.Title)</b>', @item.Id);">
-                                    @ActionStrings.Delete
-                                </a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </td>
+                <tr>
                 <td>@Html.DisplayFor(modelItem => item.Title)</td>
-                <td>@Html.DisplayFor(modelItem => item.DisplayOrder)</td>
+                <td align="right">@Html.DisplayFor(modelItem => item.DisplayOrder)</td>
+                <td>@Html.DisplayFor(modelItem => item.IgnoreInRepeat)</td>
+                <td align="right">@Html.DisplayFor(modelItem => item.RequiredWorkDays)</td>
                 <td>@Html.DisplayFor(modelItem => item.ProcessTemplate)</td>
-                <td>@Html.DisplayFor(modelItem => item.RequiredWorkDays)</td>
+                    <td>
+                        <a href='@Url.Action("Details", new { id = item.Id })' title="@ActionStrings.Details"><span class="glyphicon glyphicon-new-window ml5"></span></a>
+                        @if (canUserEdit)
+                        {
+                            <a href='@Url.Action("Edit", new { id = item.Id })' title="@ActionStrings.Edit"><span class="glyphicon glyphicon-edit ml5"></span></a>
+                        }
+                        @if (canUserDelete)
+                        {
+                            <a href="#deleteConfirm" data-toggle="modal" title="@ActionStrings.Delete" onclick="setDelete('<b>@(item.Title)</b>', @item.Id);" >
+                                <span class="glyphicon glyphicon-trash ml5"></span>
+                                </a>
+                        }
+                    </td>
             </tr>
-    }
-    </table>
-    @Html.Partial("_PagerPartial")
-    if (canUserDelete)
-    {
-        @Html.Partial("_MessageBoxPartial")
-    }
+	}
+		</table>
+    </div>
+	@Html.Partial("_PagerPartial")
+	@Html.Partial("_MessageBoxPartial")
+	@section scripts{
+		@Html.Partial("_IndexScriptsPartial", "ProcessStepTemplates") @* Controller's name *@
+	}
 }
 else
 {
     <h4>@MessageStrings.NoResults!</h4>
-}
-@section scripts{
-    @Html.Partial("_IndexScriptsPartial", "ProcessStepTemplates")
 }
