--- a/Source/CriticalPath.Web/Views/Products/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Index.cshtml
@@ -9,6 +9,7 @@
     bool canUserEdit = ViewBag.canUserEdit;
     bool canUserCreate = ViewBag.canUserCreate;
     bool canUserDelete = ViewBag.canUserDelete;
+    bool canSeeRestricted = ViewBag.canSeeRestricted;
 
     //Records & Pager
     int page = ViewBag.page;
@@ -16,7 +17,7 @@
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
 
-    var title = EntityStrings.Products;
+	var title = EntityStrings.Products;
 }
 <div class="row well">
     <div class="col-md-8 col-sm-7">
@@ -33,33 +34,30 @@
 </div>
 @if (totalCount > 0)
 {
-    <div id="productGridParent" class="table-responsive">
-        <table id="productGrid" class="table table-striped table-bordered table-hover">
-            <tr>
-                <th>@Html.DisplayNameFor(model => model.ProductCode)</th>
-                <th>@Html.DisplayNameFor(model => model.Description)</th>
-                <th>@Html.DisplayNameFor(model => model.Category)</th>
-                <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
-                <th>@Html.DisplayNameFor(model => model.Discontinued)</th>
-                <th>@ActionStrings.Actions</th>
-            </tr>
-            @foreach (var item in Model)
-            {
+	<div id="productGridParent" class="table-responsive">
+		<table id="productGrid" class="table table-striped table-bordered table-hover">
+			<tr>
+				<th>@Html.DisplayNameFor(model => model.ProductCode)</th>
+				<th>@Html.DisplayNameFor(model => model.Description)</th>
+				<th>@Html.DisplayNameFor(model => model.Category)</th>
+				<th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+				<th>@Html.DisplayNameFor(model => model.SellingCurrency)</th>
+				<th>@Html.DisplayNameFor(model => model.RoyaltyFee)</th>
+				<th>@Html.DisplayNameFor(model => model.Discontinued)</th>
+				<th>@Html.DisplayNameFor(model => model.DiscontinueDate)</th>
+				<th>@ActionStrings.Actions</th>
+			</tr>
+    @foreach (var item in Model)
+    {
                 <tr>
-                    <td>@Html.DisplayFor(modelItem => item.ProductCode)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Description)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Category)</td>
-                    <td align="right">
-                        @Html.DisplayFor(modelItem => item.UnitPrice)
-                        @Html.DisplayFor(modelItem => item.SellingCurrency)
-                    </td>
-                    <td>
-                        @if (item.Discontinued)
-                        {
-                            @Html.DisplayFor(modelItem => item.Discontinued)
-                            @Html.DisplayFor(modelItem => item.DiscontinueDate)
-                        }
-                    </td>
+                <td>@Html.DisplayFor(modelItem => item.ProductCode)</td>
+                <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                <td>@Html.DisplayFor(modelItem => item.Category)</td>
+                <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
+                <td>@Html.DisplayFor(modelItem => item.SellingCurrency)</td>
+                <td>@Html.DisplayFor(modelItem => item.RoyaltyFee)</td>
+                <td>@Html.DisplayFor(modelItem => item.Discontinued)</td>
+                <td>@Html.DisplayFor(modelItem => item.DiscontinueDate)</td>
                     <td>
                         <a href='@Url.Action("Details", new { id = item.Id })' title="@ActionStrings.Details"><span class="glyphicon glyphicon-new-window ml5"></span></a>
                         @if (canUserEdit)
@@ -73,30 +71,15 @@
                                 </a>
                         }
                     </td>
-                </tr>}
-        </table>
+            </tr>
+	}
+		</table>
     </div>
-    @Html.Partial("_PagerPartial")
-    @Html.Partial("_MessageBoxPartial")
-    @section scripts{
-        @Html.Partial("_IndexScriptsPartial", "Products") @* Controller's name *@
-        <script type="text/javascript">
-            function onActionMenuClick(menuBtn) {
-                setTimeout(function () {
-                    var menuHeight = 160;
-                    var rectMenu = menuBtn.getBoundingClientRect();
-                    var rectGrid = document.getElementById("productGrid").getBoundingClientRect();
-                    var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
-
-                    if (diffY < 0) {
-                        var viewport = $('#productGridParent');
-                        var viewportScroll = viewport.scrollTop();
-                        viewport.scrollTop((diffY * -1) + viewportScroll);
-                    }
-                }, 250);
-            }
-        </script>
-    }
+	@Html.Partial("_PagerPartial")
+	@Html.Partial("_MessageBoxPartial")
+	@section scripts{
+		@Html.Partial("_IndexScriptsPartial", "Products") @* Controller's name *@
+	}
 }
 else
 {
