--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Boolean.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Boolean.cshtml
@@ -2,4 +2,4 @@
 @{
     var valClass = Model ? "glyphicon-check text-success" : "glyphicon-unchecked text-danger";
 }
-<span style="font-size:20px;" class="glyphicon @valClass"></span>
+<span style="font-size:150%;line-height:120%;" class="glyphicon @valClass"></span>
