--- a/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
@@ -5,7 +5,7 @@
     @Html.Label(EntityStrings.UnitPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
-        @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control text-right" } })
+        @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
         @{ Html.EnableClientValidation(true); }
         @Html.ValidationMessageFor(m => m.UnitPrice, "", new { @class = "text-danger" })
     </div>
@@ -19,7 +19,7 @@
     @Html.Label(EntityStrings.BuyingPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
-        @Html.EditorFor(m => m.BuyingPrice, new { htmlAttributes = new { @class = "form-control text-right" } })
+        @Html.EditorFor(m => m.BuyingPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
         @{ Html.EnableClientValidation(true); }
         @Html.ValidationMessageFor(m => m.BuyingPrice, "", new { @class = "text-danger" })
     </div>
@@ -33,7 +33,7 @@
     @Html.Label(EntityStrings.RoyaltyFee, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
-        @Html.EditorFor(m => m.RoyaltyFee, new { htmlAttributes = new { @class = "form-control text-right" } })
+        @Html.EditorFor(m => m.RoyaltyFee, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
         @{ Html.EnableClientValidation(true); }
         @Html.ValidationMessageFor(m => m.RoyaltyFee, "", new { @class = "text-danger" })
     </div>
@@ -47,7 +47,7 @@
     @Html.Label(EntityStrings.RetailPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
-        @Html.EditorFor(m => m.RetailPrice, new { htmlAttributes = new { @class = "form-control text-right" } })
+        @Html.EditorFor(m => m.RetailPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
         @{ Html.EnableClientValidation(true); }
         @Html.ValidationMessageFor(m => m.RetailPrice, "", new { @class = "text-danger" })
     </div>
