Processes/Index works with ag-grid

--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Process.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Process.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/Processes/Details/@Model.Id'>@Model.Title</a></div>
+    <div><a href='/Processes/Details/@Model.Id'>@Model.PurchaseOrder.PoNr</a></div>
 }
