--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -69,10 +69,10 @@
         </div>
     </div>
 </div>
-<div class="container body-content">
+<div id="mainContent" class="container body-content">
     @RenderBody()
-    <hr />
-    <footer>
+    <footer id="mainFooter">
+        <hr />
         <p>&copy; @DateTime.Now.Year - C.P. App</p>
     </footer>
 </div>
